# c2md

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
c2md/: __init__.py  __main__.py  _postprocess.py  citations.py  cli.py  convert.py  crawl.py  extract.py  fetch.py  media.py  output.py  utils.py
docs/: architecture.md
tests/: test_citations.py  test_cli_security.py  test_convert.py  test_crawl.py  test_fetch.py  test_media.py  test_postprocess.py
